--- a/markitstockEx/WebContent/app/views/home.html
+++ b/markitstockEx/WebContent/app/views/home.html
@@ -4,10 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>This is a splsh page</title>
 </head>
-<body >
-	<div style="margin-top:100px;" class="jumbotron">
+<body>
+	<div class="container" style="margin-top:100px;">
+	<div class="row">
+	<div class="jumbotron">
   <h2 style="margin-left:15px;">Stock Market API provided by Markit on Demand</h2>
   
+</div>
+</div>
 </div>
 </body>
 </html>
