--- a/markitstockEx/WebContent/app/views/lookup.html
+++ b/markitstockEx/WebContent/app/views/lookup.html
@@ -5,7 +5,7 @@
 <title>Stocks</title>
 </head>
 <body ng-controller='lookupController'>
-
+	<div class="container" style="margin-top:50px;">
 	<div class="row">
 		<!-- Configure Error messages with Watch. Changes to the error text does not refresh this div -->
 <div class="alert alert-error" ng-show="message.error">
@@ -89,5 +89,7 @@
 			</tbody>
 		</table>
 	</div>
+	</div>
 </body>
+
 </html>
