Bitly add oAuth support

--- a/bitly-client/WebContent/app/views/login.html
+++ b/bitly-client/WebContent/app/views/login.html
@@ -3,21 +3,21 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Mark It Stock Exchange</title>
-<link href="/markitstockEx/app/resources/bootstrap/css/bootstrap.css"  rel="stylesheet" >
-<link href="/markitstockEx/app/resources/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
-	<script type="text/javascript" src="/markitstockEx/app/resources/jslib/angular1.2.5.js"></script>
+<link href="/bitly-client/app/resources/bootstrap/css/bootstrap.css"  rel="stylesheet" >
+<link href="/bitly-client/app/resources/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
+	<script type="text/javascript" src="/bitly-client/app/resources/jslib/angular1.2.5.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.js"></script>
 	<script src="//code.angularjs.org/1.2.13/angular-cookies.js"></script>
 	
-	<script type="text/javascript" src="/markitstockEx/app/scripts/app.js"></script>
-	<script type="text/javascript" src="/markitstockEx/app/scripts/services.js"></script>
+	<script type="text/javascript" src="/bitly-client/app/scripts/app.js"></script>
+	<script type="text/javascript" src="/bitly-client/app/scripts/services.js"></script>
 	
-	<script type="text/javascript" src="/markitstockEx/app/scripts/controllers/controllers.js"></script>
+	<script type="text/javascript" src="/bitly-client/app/scripts/controllers/controllers.js"></script>
 <script>
 
 </script>
 </head>
-<body style="margin-left:100px;margin-right:100px;margin-top:50px;" ng-app="markitstockEx">
+<body style="margin-left:100px;margin-right:100px;margin-top:50px;" ng-app="bitly-client">
 	
  <div class="col-md-12">
     <div class="modal-dialog" style="margin-bottom:0">
