--- a/bitly-client/.settings/org.eclipse.wst.common.component
+++ b/bitly-client/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,7 @@
     <wb-module deploy-name="markitstockEx">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="markitstockEx"/>
         <property name="java-output-path" value="/markitstockEx/build/classes"/>
+        <property name="context-root" value="bitly-client"/>
     </wb-module>
 </project-modules>
