Add Bar chart functionality

--- a/rsvp-analytics/public/views/templates/navigation.html
+++ b/rsvp-analytics/public/views/templates/navigation.html
@@ -6,6 +6,9 @@
                		 <li>
                         <a href="#/statistics"><i class="fa fa-fw fa-dashboard"></i> Statistics</a>
                     </li>
+                     <li>
+                        <a href="#/barchart"><i class="fa fa-fw fa-dashboard"></i> Bar Chart</a>
+                    </li>
                   
                 </ul>
             </div>
