--- a/rsvp-analytics/public/views/barchart.html
+++ b/rsvp-analytics/public/views/barchart.html
@@ -9,7 +9,7 @@
 	<div class="row">
    <div class="form-group col-md-6">
       <label for="searchText">Enter Search</label>
-      <input type="text" class="form-control" ng-model="queryObject.searchText" id="searchText" 
+      <input type="text" class="form-control" ng-model="queryObject.searchText" id="searchText"  required
          placeholder="Search any Event">
    </div>
    </div>
@@ -42,12 +42,11 @@
    </div>
    </div>
    <button ng-click="query()" class="btn btn-primary">Query</button>
-   <button ng-click="showInGraph()" class="btn btn-primary">Show in Chart</button>
 </form>
 <div style="height:10px">
 </div>
 
-<div class="row" ng-repeat="result in results" ng-show="!charting"> 
+<div class="row" ng-repeat="result in results">
 	<blockquote>
   <p>Venue : {{result.venue_name}}</p>
   <p>Group : {{result.group_name}}</p>
@@ -56,10 +55,26 @@
   </blockquote>
 </div>
 
-<div class="row" ng-show="charting" ng-if="charting">
+<canvas tc-chartjs-bar chart-options="options" chart-data="data" auto-legend></canvas>
 
-<canvas tc-chartjs-bar chart-options="options" chart-data="data"></canvas>
+<!--  <div ng-show="accounts.length > 0">
 
-</div>
-
+<table class="table table-hover">
+   <caption>List of Accounts</caption>
+   <thead>
+      <tr>
+         <th>User ID</th>
+         <th>Status</th>
+         <th>Domain Name</th>
+      </tr>
+   </thead>
+   <tbody>
+      <tr ng-repeat="account in accounts">
+         <td>{{account.userID}}</td>
+         <td>{{account.status}}</td>
+         <td>{{account.domainName}}</td>
+      </tr>
+   </tbody>
+</table>
+</div> -->
 </div>
